force-app/main/default/objects/Action_Plan_Template_Item_Value__c/Action_Plan_Template_Item_Value__c.object-meta.xml
<CustomObject>
    <label>Action Plan Template Item Value</label>
    <nameField>
        <label>Action Plan Template Item Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Template Item Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>