force-app/main/default/objects/Action_Plan_Template_Item_Value__c/fields/Action_Plan_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template Item</label>
    <referenceTo>Action_Plan_Template_Item__c</referenceTo>
    <relationshipLabel>Action Plan Template Item Values</relationshipLabel>
    <relationshipName>Action_Plan_Template_Item_Values</relationshipName>
    <type>Lookup</type>
</CustomField>