force-app/main/default/objects/Action_Plan_Template_Item_Value__c/fields/Item_Entity_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Entity_Field_Name__c</fullName>
    <label>Item Entity Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task.ActivityDate</fullName>
            </value>
            <value>
                <fullName>Task.CallDisposition</fullName>
            </value>
            <value>
                <fullName>Task.CallDurationInSeconds</fullName>
            </value>
            <value>
                <fullName>Task.CallObject</fullName>
            </value>
            <value>
                <fullName>Task.CallType</fullName>
            </value>
            <value>
                <fullName>Task.Description</fullName>
            </value>
            <value>
                <fullName>Task.IsRecurrence</fullName>
            </value>
            <value>
                <fullName>Task.IsReminderSet</fullName>
            </value>
            <value>
                <fullName>Task.OwnerId</fullName>
            </value>
            <value>
                <fullName>Task.Priority</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceDayOfMonth</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceDayOfWeekMask</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceEndDateOnly</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceInstance</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceInterval</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceMonthOfYear</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceRegeneratedType</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceStartDateOnly</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceTimeZoneSidKey</fullName>
            </value>
            <value>
                <fullName>Task.RecurrenceType</fullName>
            </value>
            <value>
                <fullName>Task.ReminderDateTime</fullName>
            </value>
            <value>
                <fullName>Task.Status</fullName>
            </value>
            <value>
                <fullName>Task.Subject</fullName>
            </value>
            <value>
                <fullName>Task.TaskSubtype</fullName>
            </value>
            <value>
                <fullName>Task.WhatId</fullName>
            </value>
            <value>
                <fullName>Task.WhoId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>