force-app/main/default/objects/Action_Plan_Template_Item_Value__c/fields/Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Value_Formula__c</fullName>
    <label>Value Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>