force-app/main/default/objects/Action_Plan_Template_Item_Value__c/fields/Value_Literal__c.field-meta.xml
<CustomField>
    <fullName>Value_Literal__c</fullName>
    <label>Value Literal</label>
    <type>TextArea</type>
</CustomField>